[package]
name = "sqlx-pg-uint-macros"
version = "0.9.0"
edition = "2021"
license = "MIT"
authors = ["bitfl0wer"]
description = "proc-macros for the `sqlx-pg-uint` crate."
rust-version = "1.61.0"
repository = "https://github.com/bitfl0wer/sqlx-pg-uint"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.101"
