[package]
name = "sqlx-pg-uint"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["bitfl0wer"]
description = "SQLx compatible types to convert between Rust unsigned integers and the PostgreSQL `NUMERIC`/`DECIMAL` type seamlessly."

[dependencies]
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "bigdecimal",
] }
thiserror = "1.0"
sqlx-pg-uint-macros = { version = "0.1.0" }
#sqlx-pg-uint-macros = { path = "../sqlx-pg-uint-macros" }
bigdecimal = "0.4.5"
